tests/snapshots/e2e__e2e_complex_nested_json__json__n100.snap
---
source: tests/e2e.rs
expression: stdout
---
{
  "users": [
    {},
    {}
  ],
  "meta": {
    "page": 1,
    "pageSize": 20
  }
}
